# vulkan-renderer-demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vulkan-renderer-demo.sln
code/common/: CMakeLists.txt  Hash.h  NewDelete.cpp  Timer.cpp  Timer.h  Utils.cpp  Utils.h  align.cpp  charming_enum.h  fmt.cpp  fmt.h  glm-fwd.h  glm.h  json-glm.cpp  json-glm.h  json-nstl.cpp  json-nstl.h  json-tiny-ctti.h  tiny_ctti.h
code/common/src/: Timer.cpp  Utils.cpp  json-glm.cpp  json-nstl.cpp
code/demo/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  CommandMetadata.cpp  CommandMetadata.h  CommandProxy.h  DebugConsole.cpp  DebugConsole.h  DemoApplication.cpp  DemoApplication.h  DemoSceneDrawer.cpp  DemoSceneDrawer.h  GlfwWindow.cpp  GlfwWindow.h  ImGuiDrawer.cpp  ImGuiDrawer.h  ImGuiPlatform.cpp  ImGuiPlatform.h  ScopedDebugCommands.cpp  ScopedDebugCommands.h  ShaderPackage.cpp  ShaderPackage.h  main.cpp  pch.h
code/demo/console/: EditorSerializer.cpp  EditorSerializer.h  EnumSerializer.h  GlmSerializer.cpp  GlmSerializer.h
code/demo/services/: CommandLine.cpp  CommandLine.h  CommandLineService.cpp  CommandLineService.h  DebugConsole.h  DebugConsoleService.cpp  DebugConsoleService.h  DebugDrawService.cpp  DebugDrawService.h  ServiceContainer.h  Services.cpp  Services.h
code/demo/ui/: DebugConsoleWidget.cpp  DebugConsoleWidget.h  MemoryViewerWindow.cpp  MemoryViewerWindow.h  NotificationManager.cpp  NotificationManager.h
code/editor/: CMakeLists.txt
code/editor/assets/: AssetData.h  AssetDatabase.cpp  AssetDatabase.h  AssetImporterGltf.cpp  AssetImporterGltf.h  AssetImporterImage.cpp  AssetImporterImage.h  CMakeLists.txt  ImportDescription.h  Uuid.cpp  Uuid.h
code/gfx_vk/: CMakeLists.txt
code/gfx_vk/src/: backend.cpp  buffer.cpp  buffer.h  command_pool.cpp  command_pool.h  context.cpp  context.h  conversions.cpp  conversions.h  descriptor_allocator.cpp  descriptor_allocator.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptorgroup.cpp  descriptorgroup.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  memory.cpp  memory.h  pipeline_layout.cpp  pipeline_layout.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  renderstate.cpp  renderstate.h  resource_container.cpp  resource_container.h  sampler.cpp  sampler.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.h  (+3 more)
code/imgui/: CMakeLists.txt
code/memory/: CMakeLists.txt
code/memory/src/: memory.cpp  new.cpp  tracking.cpp  untracked_allocator.cpp
code/mt/: CMakeLists.txt
code/mt/src/: lock_guard.cpp  mutex.cpp  thread.cpp  thread_id.cpp
code/nstl/: CMakeLists.txt  nstl.natvis  pch.h
code/nstl/src/: Buffer.cpp  New.cpp  String.cpp  StringView.cpp  alignment.cpp  allocator.cpp  blob.cpp  blob_view.cpp  buffer.cpp  hash.cpp  malloc_allocator.cpp  new.cpp  sprintf.cpp  string.cpp  string_builder.cpp  string_view.cpp
code/picofmt/: CMakeLists.txt
code/picofmt/src/: core_impl.cpp  util.cpp  (+2 more)
code/platform/: CMakeLists.txt
code/platform_win64/: CMakeLists.txt
code/renderer/: Application.cpp  Application.h  Buffer.cpp  BufferWithMemory.cpp  BufferWithMemory.h  CMakeLists.txt  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DebugMessenger.cpp  DebugMessenger.h  Drawable.h  GlfwWindow.cpp  GlfwWindow.h  Hash.h  Image.cpp  Image.h  Instance.cpp  Light.h  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ObjectInstance.cpp  ObjectInstance.h  PhysicalDeviceSurfaceContainer.h  PhysicalDeviceSurfaceParameters.cpp  PhysicalDeviceSurfaceParameters.h  PipelineConfiguration.cpp  PipelineConfiguration.h  PipelineLayout.cpp  PipelineLayout.h  Queue.cpp  Queue.h  QueueFamilyIndices.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SceneObject.h  (+22 more)
code/tglm/: CMakeLists.txt
code/tiny_glm/: CMakeLists.txt
code/tiny_ktx/: CMakeLists.txt
code/vkgfx/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  Handles.h  Image.h  ImageMetadata.h  Material.h  Mesh.h  PipelineKey.cpp  PipelineKey.h  Renderer.cpp  Renderer.h  ResourceContainer.cpp  ResourceContainer.h  ResourceManager.cpp  ResourceManager.h  TestObject.h  Texture.h  pch.h
code/vko/: Allocator.cpp  Allocator.h  Assert.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffers.cpp  CommandBuffers.h  CommandPool.cpp  CommandPool.h  DebugMessage.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSets.cpp  DescriptorSets.h  Device.cpp  Device.h  DeviceMemory.cpp  DeviceMemory.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDeviceSurfaceParameters.cpp  PhysicalDeviceSurfaceParameters.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Queue.cpp  (+19 more)
code/vkr/: Application.cpp  Application.h  CMakeLists.txt  PhysicalDeviceSurfaceContainer.cpp  PhysicalDeviceSurfaceContainer.h  PhysicalDeviceSurfaceParameters.cpp  PhysicalDeviceSurfaceParameters.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  pch.h
code/yyjsoncpp/: CMakeLists.txt
demo/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  DebugConsole.cpp  DebugConsole.h  DemoApplication.cpp  DemoApplication.h  main.cpp  vulkan-renderer-demo.cpp
demo/ui/: DebugConsole.cpp  DebugConsole.h  DebugConsoleWidget.cpp  DebugConsoleWidget.h  NotificationManager.cpp  NotificationManager.h
imgui/: CMakeLists.txt
imgui-backend/: CMakeLists.txt
renderer/: Application.cpp  Application.h  CMakeLists.txt  Camera.h  CommandBuffer.h  DebugMessage.h  DescriptorSets.h  DeviceMemory.cpp  DeviceMemory.h  Framebuffer.cpp  Hash.h  ImageView.cpp  Instance.h  Light.h  Mesh.cpp  Mesh.h  Object.h  ObjectInstance.cpp  ObjectInstance.h  PhysicalDevice.cpp  PhysicalDeviceSurfaceContainer.cpp  PhysicalDeviceSurfaceParameters.cpp  PipelineConfiguration.h  QueueFamilyIndices.cpp  RenderPass.cpp  Renderer.cpp  Renderer.h  Shader.h  ShaderModule.h  Surface.cpp  Swapchain.h  Texture.cpp  UniqueHandle.cpp  VertexLayout.cpp  VertexLayoutDescriptions.h  Window.cpp  Window.h
(+672 files in other folders)
