set(PROJECT_NAME librenderer)

set(ALL_FILES
    "glm.h"

    "wrapper/Buffer.h"
    "wrapper/Buffer.cpp"
    "wrapper/CommandBuffers.h"
    "wrapper/CommandBuffers.cpp"
    "wrapper/CommandPool.h"
    "wrapper/CommandPool.cpp"
    "wrapper/DebugMessage.h"
    "wrapper/DebugMessenger.h"
    "wrapper/DebugMessenger.cpp"
    "wrapper/DescriptorPool.h"
    "wrapper/DescriptorPool.cpp"
    "wrapper/DescriptorSetLayout.h"
    "wrapper/DescriptorSetLayout.cpp"
    "wrapper/DescriptorSets.h"
    "wrapper/DescriptorSets.cpp"
    "wrapper/Device.h"
    "wrapper/Device.cpp"
    "wrapper/DeviceMemory.h"
    "wrapper/DeviceMemory.cpp"
    "wrapper/Fence.h"
    "wrapper/Fence.cpp"
    "wrapper/Framebuffer.h"
    "wrapper/Framebuffer.cpp"
    "wrapper/Image.h"
    "wrapper/Image.cpp"
    "wrapper/ImageView.h"
    "wrapper/ImageView.cpp"
    "wrapper/Instance.h"
    "wrapper/Instance.cpp"
    "wrapper/PhysicalDevice.h"
    "wrapper/PhysicalDevice.cpp"
    "wrapper/Pipeline.h"
    "wrapper/Pipeline.cpp"
    "wrapper/PipelineLayout.h"
    "wrapper/PipelineLayout.cpp"
    "wrapper/Queue.h"
    "wrapper/Queue.cpp"
    "wrapper/QueueFamily.h"
    "wrapper/QueueFamily.cpp"
    "wrapper/RenderPass.h"
    "wrapper/RenderPass.cpp"
    "wrapper/Sampler.h"
    "wrapper/Sampler.cpp"
    "wrapper/Semaphore.h"
    "wrapper/Semaphore.cpp"
    "wrapper/ShaderModule.h"
    "wrapper/ShaderModule.cpp"
    "wrapper/Surface.h"
    "wrapper/Surface.cpp"
    "wrapper/Swapchain.h"
    "wrapper/Swapchain.cpp"
    "wrapper/UniqueHandle.h"
    "wrapper/UniqueHandle.cpp"
    "wrapper/Window.h"
    "wrapper/Window.cpp"
    
    "vkgfx/Buffer.h"
    "vkgfx/Buffer.cpp"
    "vkgfx/BufferMetadata.h"
    "vkgfx/Image.h"
    "vkgfx/Image.cpp"
    "vkgfx/ImageMetadata.h"
    "vkgfx/Sampler.h"
    "vkgfx/Sampler.cpp"
    "vkgfx/Texture.h"
    "vkgfx/Material.h"
    "vkgfx/Mesh.h"
    "vkgfx/PipelineKey.h"
    "vkgfx/Handles.h"
    "vkgfx/ResourceManager.h"
    "vkgfx/ResourceManager.cpp"
    "vkgfx/Renderer.h"
    "vkgfx/Renderer.cpp"

    "vkgfx/TestObject.h"

    "Application.cpp"
    "Application.h"
    "BufferWithMemory.h"
    "BufferWithMemory.cpp"
    "Camera.cpp"
    "Camera.h"
    "CommandBuffer.cpp"
    "CommandBuffer.h"
    "Drawable.cpp"
    "Drawable.h"
    "Hash.cpp"
    "Hash.h"
    "Light.cpp"
    "Light.h"
    "Material.cpp"
    "Material.h"
    "Mesh.cpp"
    "Mesh.h"
    "Object.cpp"
    "Object.h"
    "ObjectInstance.cpp"
    "ObjectInstance.h"
    "PhysicalDeviceSurfaceContainer.cpp"
    "PhysicalDeviceSurfaceContainer.h"
    "PhysicalDeviceSurfaceParameters.cpp"
    "PhysicalDeviceSurfaceParameters.h"
    "PipelineConfiguration.cpp"
    "vkgfx/PipelineKey.h"
    "QueueFamilyIndices.cpp"
    "QueueFamilyIndices.h"
    "Renderer.cpp"
    "Renderer.h"
    "SceneObject.h"
    "SceneObject.cpp"
    "ScopedOneTimeCommandBuffer.cpp"
    "ScopedOneTimeCommandBuffer.h"
    "Shader.cpp"
    "Shader.h"
    "ShaderPackage.h"
    "ShaderPackage.cpp"
    "Texture.cpp"
    "Texture.h"
    "Timer.cpp"
    "Timer.h"
    "Transform.cpp"
    "Transform.h"
    "Utils.cpp"
    "Utils.h"
    "VertexLayout.cpp"
    "VertexLayout.h"
    "VertexLayoutDescriptions.cpp"
    "VertexLayoutDescriptions.h"
    
    "GlfwWindow.cpp"
    "GlfwWindow.h"
)

add_library(${PROJECT_NAME} ${ALL_FILES})

target_include_directories(${PROJECT_NAME}
    PRIVATE
    "${CMAKE_SOURCE_DIR}/include"

    PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}"
)

target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)

target_link_libraries(${PROJECT_NAME}
    imgui
    glfw
    Vulkan::Vulkan
    glm::glm
    tinygltf
    nlohmann_json::nlohmann_json
    VulkanMemoryAllocator
)
